--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <title>Digital House</title>
 </head>
@@ -12,13 +13,14 @@
     <header>
       <nav>
         <ul>
-          <li>home</li>
-          <li>productos</li>
-          <li>contacto</li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="productos.html">productos</a></li>
+          <li><a href="contacto.html">contacto</a></li>
         </ul>
       </nav>
     </header>
     <h1>BIENVENIDOS<br>a DigitalHouse</h1>
+    <img src="fondoSeccion.jpg" alt="PresentacionS">
   </div>
 </body>
 </html>
