--- a/productos.html
+++ b/productos.html
@@ -12,12 +12,29 @@
     <header>
       <nav>
         <ul>
-          <li>home</li>
-          <li>productos</li>
-          <li>contacto</li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="productos.html">productos</a></li>
+          <li><a href="contacto.html">contacto</a></li>
         </ul>
       </nav>
     </header>
+    <section>
+      <h2>PRODUCTOS</h2>
+      <div class="articulos">
+        <article>
+          <img src="img/WebPage.jpg" alt="Diseño de Sitios Web">
+          <h4>Diseño de Sitios Web</h4>
+        </article>
+        <article>
+          <img src="img/AndroidApp.png" alt="Diseño Apps Android">
+          <h4>Diseño Apps Android</h4>
+        </article>
+        <article>
+          <img src="img/UxDesign.jpg" alt="Diseño de UX">
+          <h4>Diseño de UX</h4>
+        </article>
+      </div>
+    </section>
   </div>
 </body>
 </html>
