--- a/contacto.html
+++ b/contacto.html
@@ -12,9 +12,9 @@
     <header>
       <nav>
         <ul>
-          <li>home</li>
-          <li>productos</li>
-          <li>contacto</li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="productos.html">productos</a></li>
+          <li><a href="contacto.html">contacto</a></li>
         </ul>
       </nav>
     </header>
