--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </ul>
       </nav>
     </header>
-    <h1>BIENVENIDOS<br>a DigitalHouse</h1>
-    <img src="fondoSeccion.jpg" alt="PresentacionS">
+    <h1>BIENVENIDOS<br>a Digital House</h1>
+    <img src="img/fondoSeccion.jpg" alt="Presentacion">
   </div>
 </body>
 </html>
