--- a/productos.html
+++ b/productos.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <title>Digital House</title>
 </head>
@@ -22,16 +23,16 @@
       <h2>PRODUCTOS</h2>
       <div class="articulos">
         <article>
-          <img src="img/WebPage.jpg" alt="Diseño de Sitios Web">
           <h4>Diseño de Sitios Web</h4>
+          <img src="img/WebPage.jpg" alt="Diseño de Sitios Web">
         </article>
         <article>
-          <img src="img/AndroidApp.png" alt="Diseño Apps Android">
           <h4>Diseño Apps Android</h4>
+          <img src="img/AndroidApp.png" alt="Diseño Apps Android">
         </article>
         <article>
-          <img src="img/UxDesign.jpg" alt="Diseño de UX">
           <h4>Diseño de UX</h4>
+          <img src="img/UxDesign.jpg" alt="Diseño de UX">
         </article>
       </div>
     </section>
