--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         </ul>
       </nav>
     </header>
-    <h1>BIENVENIDOS<br>a Digital House</h1>
-    <img src="img/fondoSeccion.jpg" alt="Presentacion">
+    <div class="position">
+      <h1>BIENVENIDOS<br><br>a Digital House</h1>
+      <img src="img/fondoSeccion.jpg" alt="Presentacion">
+    </div>
   </div>
 </body>
 </html>
