--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <header>
+    <header class="encabezado">
       <nav>
         <ul>
           <li><a href="index.html">home</a></li>
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <div class="position">
-      <h1>BIENVENIDOS<br><br>a Digital House</h1>
+      <h1>BIENVENIDOS<br><br><br><br>a Digital House</h1>
       <img src="img/fondoSeccion.jpg" alt="Presentacion">
     </div>
   </div>
