--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <header>
+    <header class="encabezado">
       <nav>
         <ul>
           <li><a href="index.html">home</a></li>
@@ -22,15 +22,15 @@
     <section>
       <h2>PRODUCTOS</h2>
       <div class="articulos">
-        <article>
+        <article class="articulo">
           <h4>Diseño de Sitios Web</h4>
           <img src="img/WebPage.jpg" alt="Diseño de Sitios Web">
         </article>
-        <article>
+        <article class="articulo">
           <h4>Diseño Apps Android</h4>
           <img src="img/AndroidApp.png" alt="Diseño Apps Android">
         </article>
-        <article>
+        <article class="articulo">
           <h4>Diseño de UX</h4>
           <img src="img/UxDesign.jpg" alt="Diseño de UX">
         </article>
