--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <header>
+    <header class="encabezado">
       <nav>
         <ul>
           <li><a href="index.html">home</a></li>
