--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <div class="position">
-      <h1>BIENVENIDOS<br><br><br><br>a Digital House</h1>
+      <h1>BIENVENIDOS<br><br><br>a Digital House</h1>
       <img src="img/fondoSeccion.jpg" alt="Presentacion">
     </div>
   </div>
