--- a/productos.html
+++ b/productos.html
@@ -19,7 +19,7 @@
         </ul>
       </nav>
     </header>
-    <section>
+    <section class="productos">
       <h2>PRODUCTOS</h2>
       <div class="articulos">
         <article class="articulo">
