--- a/contacto.html
+++ b/contacto.html
@@ -20,12 +20,14 @@
         </nav>
       </header>
     </div>
-    <form class="fomulario" action="contacto.html" method="post">
-      <label for="">Nombre</label><input type="text" name="Nombre" value="" required><br>
-      <label for="">Apellido</label><input type="text" name="Apellido" value="" required><br>
-      <label for="">e-mail</label><input type="email" name="e-mail" value="" required><br>
-      <label for="">Deje su consulta</label><input type="text" name="Deje su consulta" value="" required><br><br>
-      <button type="submit" name="Enviar">Enviar</button><button type="reset" name="Cancelar">Cancelar</button>
-    </form>
+    <div class="form">
+      <form class="fomulario" action="contacto.html" method="post">
+        <label for="">Nombre</label><input type="text" name="Nombre" value="" required><br>
+        <label for="">Apellido</label><input type="text" name="Apellido" value="" required><br>
+        <label for="">e-mail</label><input type="email" name="e-mail" value="" required><br>
+        <label for="">Deje su consulta</label><input class="consulta" type="text" name="Deje su consulta" value="" required><br><br>
+        <button class="enviar" type="submit" name="Enviar">Enviar</button><button type="reset" name="Cancelar">Cancelar</button>
+      </form>
+    </div>
   </body>
 </html>
